// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> render button disable and large 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "center",
      "backgroundColor": "#D8D8D8",
      "marginTop": 24,
      "opacity": 1,
      "width": "90%",
    }
  }
  testID="button"
>
  <Text
    style={
      Object {
        "color": "white",
        "fontFamily": "AvenirLTStd",
        "fontSize": 12,
        "paddingVertical": 12,
        "textAlign": "center",
      }
    }
  >
    Test button
  </Text>
</View>
`;

exports[`<Button /> render button disable and short 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "center",
      "backgroundColor": "#D8D8D8",
      "marginTop": 24,
      "opacity": 1,
      "width": "60%",
    }
  }
  testID="button"
>
  <Text
    style={
      Object {
        "color": "white",
        "fontFamily": "AvenirLTStd",
        "fontSize": 12,
        "paddingVertical": 12,
        "textAlign": "center",
      }
    }
  >
    Test button
  </Text>
</View>
`;

exports[`<Button /> render button enable and large 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "center",
      "backgroundColor": "#5FBA20",
      "marginTop": 24,
      "opacity": 1,
      "width": "90%",
    }
  }
  testID="button"
>
  <Text
    style={
      Object {
        "color": "white",
        "fontFamily": "AvenirLTStd",
        "fontSize": 12,
        "paddingVertical": 12,
        "textAlign": "center",
      }
    }
  >
    Test button
  </Text>
</View>
`;
